--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "method-override": "~2.3.5",
     "mocha": "~2.4.5",
     "mongoose": "~4.4.3",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.6.1",
     "multer": "~1.1.0",
     "nodemailer": "~2.1.0",
@@ -60,6 +61,7 @@
     "passport-paypal-openidconnect": "~0.1.1",
     "passport-twitter": "~1.0.4",
     "phantomjs": "~1.9.19",
+    "promise": "^7.1.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "~1.3.7",
     "swig": "~1.4.2",
