--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-ui-utils": "bower",
     "bootstrap": "~3",
     "owasp-password-strength-test": "~1.3.0",
-    "JsBarcode": "jsbarcode#^2.0.1"
+    "JsBarcode": "jsbarcode#^2.0.1",
+    "underscore": "^1.8.3"
   },
   "resolutions": {
     "angular": "~1.3"
